# http

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  add_cmakelists_tests.sh
.github/workflows/: cmake.yml  server-docker-image.yml
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.c  main.c
client/tests/: client.c
include/: http.h  http_communication.h  read_line.h  search_tree.h
proxy/: Dockerfile
reverse_proxy/: Dockerfile
server/: CMakeLists.txt  Dockerfile
server/default/: http_server.conf  http_server.default.conf
server/default/html/: index.html  robots.txt
server/default/html/error/: 404.html
server/default/html/error/css/: 404.css
server/include/: config.h  server.h
server/src/: config.c  main.c  server.c
server/tests/: config.c
shared_lib/: CMakeLists.txt
shared_lib/include/: array_utils.h  files.h  http.h  http_communication.h  int_to_str.h  paths.h  sanitise.h  search_tree.h  sendall.h  trim_whitespace.h
shared_lib/src/: array_utils.c  files.c  http.c  http_communication.c  int_to_str.c  paths.c  read_line.c  sanitise.c  search_tree.c  sendall.c
shared_lib/tests/: array_utils.c  files.c  http.c  paths.c  read_line.c  sanitise.c  trim_whitespace.c
src/: http.c  http_communication.c  main.c  search_tree.c  trim_whitespace.c
tests/: http.c  http_communication_server.c  search_tree.c
