cmake_minimum_required(VERSION 3.22)
project(http_server)
include(CTest)
include_directories(include)
FILE(GLOB sources src/*.c)
LIST(REMOVE_ITEM sources "main.c")
add_library(httpserver ${sources}) 
add_executable(http_server src/main.c)
target_link_libraries(http_server httpserver)
add_executable(test_read_line tests/read_line.c)
target_link_libraries(test_read_line httpserver)
add_test(NAME read_line COMMAND test_read_line)
add_executable(test_search_tree tests/search_tree.c)
target_link_libraries(test_search_tree httpserver)
add_test(NAME search_tree COMMAND test_search_tree)
add_executable(test_http tests/http.c)
target_link_libraries(test_http httpserver)
add_test(NAME http COMMAND test_http)
add_executable(test_trim_whitespace tests/trim_whitespace.c)
target_link_libraries(test_trim_whitespace httpserver)
add_test(NAME trim_whitespace COMMAND test_trim_whitespace)
add_executable(test_http_communication_server tests/http_communication_server.c)
target_link_libraries(test_http_communication_server httpserver)
