cmake_minimum_required(VERSION 3.22)
project(http)
include(CTest)
include_directories(shared_lib/include)
option(BUILD_SERVER "build the http server component" ON)
option(BUILD_CLIENT "build the http client component" ON)
option(BUILD_PROXY "build the http proxy component" ON)
option(BUILD_REVERSE_PROXY "build the http reverse proxy component" ON)
add_subdirectory(shared_lib)

if (BUILD_PROXY)
    add_subdirectory(proxy)
endif()
if (BUILD_REVERSE_PROXY)
    add_subdirectory(reverse_proxy)
endif()
if (BUILD_SERVER)
    add_subdirectory(server)
endif()
if (BUILD_CLIENT)
    add_subdirectory(client)
endif()
